tests/react_hocs/react_hocs.exp
Error: Bad.js:11
 11: const Bad = (props: Props) => null;
                 ^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
122:   (props: Props, context: any): React$Node,
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:122
  The first parameter is incompatible:
                                 v-
     15: ): (React.ComponentType<{|
     16:   ...Props,
     17:   ...ExtraProps,
     18: |}>) => React.ComponentType<Props> {
         -^ object type. This type is incompatible with. See: hocs.js:15
     11: const Bad = (props: Props) => null;
                             ^^^^^ Props
      Property `foo` is incompatible:
         11: const Bad = (props: Props) => null;
                                 ^^^^^ property `foo`. Property not found in
                                     v-
         15: ): (React.ComponentType<{|
         16:   ...Props,
         17:   ...ExtraProps,
         18: |}>) => React.ComponentType<Props> {
             -^ object type. See: hocs.js:15

Error: Bad.js:11
 11: const Bad = (props: Props) => null;
                         ^^^^^ In property `bar`, number [1] is incompatible with string [2].
  References:
    8:   bar: number,
              ^^^^^^ [1]: number
  144:     toString(radix?: number): string;
                                     ^^^^^^ [2]: string. See lib: <BUILTINS>/core.js:144

Error: Good.js:15
 15:   mapProps(({ foo, buz, qux }) => ({
                   ^^^ property `foo`. Property not found in
  9: <Good buz={2} qux={3} />; // Error: Missing foo
     ^^^^^^^^^^^^^^^^^^^^^^^^ props. See: Good_use.js:9

Error: Good.js:15
 15:   mapProps(({ foo, buz, qux }) => ({
                        ^^^ property `buz`. Property not found in
  8: <Good foo={1} qux={3} />; // Error: Missing buz
     ^^^^^^^^^^^^^^^^^^^^^^^^ props. See: Good_use.js:8

Error: Good.js:15
 15:   mapProps(({ foo, buz, qux }) => ({
                             ^^^ property `qux`. Property not found in
  7: <Good foo={1} buz={2} />; // Error: Missing qux
     ^^^^^^^^^^^^^^^^^^^^^^^^ props. See: Good_use.js:7

Error: Good.js:17
 17:     buz: buz * 2,
              ^^^ string. The operand of an arithmetic operation must be a number.

Error: Good.js:18
 18:     qux,
         ^^^ string [1] is incompatible with number [2].
  References:
   11: <Good foo={1} buz={2} qux="nope" />; // Error: string ~> number
                                 ^^^^^^ [1]: string. See: Good_use.js:11
    9:   qux: number,
              ^^^^^^ [2]: number


Found 7 errors
